# deputy

./: .gitignore  README.md  clash_config.yaml  clash_config_2.yaml  clash_config_r.yaml  clash_config_r2.yaml  clash_config_v3.yaml  clash_config_v5.yaml  comet.yaml  config.template.yaml  config_magisk.yaml  config_mobile.yaml  config_mobile_baipiao.yaml  get_node_list.py  nodes.toml  out.yaml  pyproject.toml  sync_config.toml
docs/: nodes-toml-guide.md
magisk/: AdGuardHome.yaml  clash.yaml  config (1).yaml  config.yaml  config_v2.yaml
proxy_providers/: 共享_anaer.yaml  共享_dong.yaml  共享_ermaozi.yaml  共享_getNode.yaml  共享_vxiaov.yaml  火锅_白嫖.yaml  群主_wget.yaml  群主_三分.yaml  群主_星链云.yaml  达达_极速.yaml
rule_providers/: antiAD.yaml  cncidr.yaml  direct.yaml
scripts/: fetch_transport.py  github_actions_logger.py  node_renamer.py  node_verifier.py  quality_metrics.py  release_publisher.py  sync_nodes.py  template_renderer.py  toml_config.py
templates/: head.yaml  head_mobile.yaml  proxy-providers.yaml  proxy-providers_baipiao.yaml  rules_group.yaml  rules_group_mobile.yaml
tests/: conftest.py  test_cn_probe_provider.py  test_core_nodes.py  test_e2e_smoke.py  test_fetch_transport.py  test_logger.py  test_logging.py  test_node_renamer.py  test_node_verifier.py  test_probing_tcp.py  test_publishing_release.py  test_quality_metrics.py  test_release_publisher.py  test_rendering_config.py  test_subscription_sources.py  test_sync_nodes.py  test_sync_nodes_workflow.py  test_sync_orchestration.py  test_sync_summary.py  test_template_renderer.py  test_toml_config.py  (+3 more)
(+60 files in other folders)
